# VslamPractice

./: CMakeLists.txt  helloSLAM.cpp
bundle_adjustment/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjustment_ceres.cpp  common.h
camera/: CMakeLists.txt  imageBasics.cpp  undistortImages.cpp
dense_mapping/: CMakeLists.txt  pcl_mapping.cpp
optimization/: CMakeLists.txt  curveFittingCeres.cpp  pose_estimation_3d2d.cpp
useEigen/: CMakeLists.txt  eigenGeometry.cpp  eigenMatrix.cpp  plotTrajectory.cpp
useEigen/eigenhomework/: CMakeLists.txt  eigenhomework.cpp
vslam/: CMakeLists.txt
vslam/app/: CMakeLists.txt
vslam/include/: Map.h  MapPoint.h  feature.h  frame.h
vslam/src/: CMakeLists.txt  Map.cpp  MapPoint.cpp  frame.cpp
